#158: Fixed review findings and broken links